--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>GetInTouch</title>
+	<title>GetInTocuh</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -20,6 +20,7 @@
 		</header>
 		<main class="page">
 			<section data-fullscreen class="page___form-temp--01 form-temp--01">
+
 				<div class="form-temp--01__container">
 					<div class="form-temp--01__title-block title-block-tmp-01">
 						<h1 class="title-block-tmp-01__title">Get in touch</h1>
@@ -29,14 +30,20 @@
 						</div>
 					</div>
 					<div class="form-temp--01__body">
+						<div class="form-temp--01__decor  decor-form-temp">
+							<span></span>
+
+
+						</div>
 						<div class="form-temp--01__template-form--01  template-form--01 ">
+
 							<div class="template-form--01__header">
 								<h3 class="template-form--01__title">Let’s connect constellations</h3>
 								<div class="template-form--01__sub-title-title">
 									<p>Let's align our constellations! Reach out and let the magic of collaboration illuminate our skies.</p>
 								</div>
 							</div>
-							<form data-dev action="#" class="template-form--01__body"  method="post" enctype="multipart/form-data">
+							<form data-dev action="sendmail.php" class="template-form--01__body" method="post" enctype="multipart/form-data">
 								<div class="template-form--01__input  input-template-form-01   input-template-form-01--username">
 									<input data-required tabindex="1" type="text" autocomplete="off" name="userLastName" placeholder="Last Name*" data-error="Fill the field">
 								</div>
@@ -90,7 +97,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.js"></script>
+	<script src="js/app.min.js?_v=20240924165349"></script>
 </body>
 
 </html>
